# wigner_j

./: README.md
docs/cg_formula/: Makefile  main.tex
docs/cg_formula/src/: appendix_1.tex  binomial.tex  factorial.tex  sum_range.tex  test.tex
naive_cg_coefficient/: Cargo.toml  build.rs
naive_cg_coefficient/examples/: cg_coefficient_binomial.rs  cg_coefficient_cffi.rs  cg_coefficient_example.rs  exec_sample.sh  three_j_example.rs
naive_cg_coefficient/examples/benchmark/: calc_cg.rs  error.rs  plot.py
naive_cg_coefficient/src/: binomial.rs  cg_coeffcient.rs  cg_coefficient_cffi.rs  factorial.rs  internal.rs  lib.rs  three_j_symbol.rs
naive_cg_coefficient/src/c/: cg_coefficient_c.c
naive_cg_coefficient/tests/: stack_overflow.rs  test_cg_coefficient.rs  test_cg_coefficient_binomial.rs
